TS: A062 - External libraries

--- a/jstypescript/package.json
+++ b/jstypescript/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash": "^4.14.195",
     "@types/node": "^20.4.2",
     "@types/validator": "^13.7.17",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -27,6 +28,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "validator": "^13.9.0"
   }
 }
