--- a/blog-next/package.json
+++ b/blog-next/package.json
@@ -6,25 +6,55 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy:static": "next build && next export",
+    "postbuild": "next-on-netlify",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "storybook": "storybook dev -s ./public -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "disqus-react": "^1.1.5",
     "next": "13.4.12",
+    "next-on-netlify": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "remark": "^14.0.3",
+    "remark-html": "^15.0.2",
+    "styled-components": "^6.0.5",
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.22.5",
+    "@storybook/addon-essentials": "^7.2.0",
+    "@storybook/addon-interactions": "^7.2.0",
+    "@storybook/addon-links": "^7.2.0",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.2.0",
+    "@storybook/nextjs": "^7.2.0",
+    "@storybook/react": "^7.2.0",
+    "@storybook/testing-library": "^0.2.0",
+    "@styled/typescript-styled-plugin": "^1.0.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.3",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^3.0.0"
+    "eslint-plugin-storybook": "^0.6.13",
+    "jest": "^29.6.2",
+    "jest-styled-components": "^7.1.1",
+    "prettier": "^3.0.0",
+    "storybook": "^7.2.0"
   }
 }
