node.js course fifteenth section

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
 **/node_modules/
+Node.js do Zero a Maestria com diversos Projetos/15_GETAPET/frontend/src/assets/img/logo.png
+Node.js do Zero a Maestria com diversos Projetos/15_GETAPET/pets/labra1.jpg
+Node.js do Zero a Maestria com diversos Projetos/15_GETAPET/pets/labra2.jpg
+Node.js do Zero a Maestria com diversos Projetos/15_GETAPET/pets/pet5.jpg
+Node.js do Zero a Maestria com diversos Projetos/15_GETAPET/pets/pet6.jpg
+Node.js do Zero a Maestria com diversos Projetos/15_GETAPET/pets/pet7.jpg
+Node.js do Zero a Maestria com diversos Projetos/15_GETAPET/pets/pet8.jpg
+Node.js do Zero a Maestria com diversos Projetos/15_GETAPET/pets/pet9.jpg
+Node.js do Zero a Maestria com diversos Projetos/15_GETAPET/pets/labra3.jpg
+Node.js do Zero a Maestria com diversos Projetos/15_GETAPET/pets/pet4.jpg
+Node.js do Zero a Maestria com diversos Projetos/15_GETAPET/pets/pet1.jpg
+Node.js do Zero a Maestria com diversos Projetos/15_GETAPET/pets/pet10.jpg
+Node.js do Zero a Maestria com diversos Projetos/15_GETAPET/pets/pet2.jpg
+Node.js do Zero a Maestria com diversos Projetos/15_GETAPET/pets/pet3.jpg
