--- a/JavaScript/NestJS Fundamentos/api-typeorm/.env.example
+++ b/JavaScript/NestJS Fundamentos/api-typeorm/.env.example
@@ -1,2 +1,2 @@
-DATABASE_URL="mysql://root:exmaple@localhost:3306/api"
+DATABASE_URL="mysql://root:root@localhost:3306/api"
 JWT_SECRET="&O,H$2%U_M9kRu{u&@dxGrG+pwReQse"
