--- a/JavaScript/NestJS Fundamentos/api-typeorm/.env.test
+++ b/JavaScript/NestJS Fundamentos/api-typeorm/.env.test
@@ -3,7 +3,7 @@ ENV="test"
 JWT_SECRET="&O,H$2%U_M9kRu{u&@dxGrG+pwReQse"
 
 DB_USERNAME="root"
-DB_PASSWORD="example"
+DB_PASSWORD="root"
 DB_DATABASE="api-test"
 DB_HOST="localhost"
 DB_PORT="3306"
